2010-04-14  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>

	Ensure that std::ofstream is destroyed before renaming.
	* src/SessionSerializer.cc
	* src/util.cc

2010-04-13  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>

	Fixed the bug that user specified path is escaped using
	util::escapePath() where it should not.
	* src/DownloadContext.cc
	* src/DownloadContext.h

2010-04-13  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>

	Hold reference to PieceStorage when paused in order to provide
	progress information via XML-RPC.
	* src/RequestGroup.cc
	* src/RequestGroup.h
	* src/RequestGroupMan.cc

2010-04-12  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>

	Defined struct timespec if it is not available.
	* src/a2time.h

2010-04-12  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>

	Added missing serialize_session.meta4 to EXTRA_DIST
	* test/Makefile.am

2010-04-12  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>

	Fixed compile error without BitTorrent support.
	* src/Metalink2RequestGroup.cc

2010-04-12  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>

	Fixed compile error on Mac OS X
	* src/TimerA2.h

2010-04-12  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>

	Added warning for the system which lacks clock_gettime with
	CLOCK_MONOTONIC.
	* src/MultiUrlRequestInfo.cc
	* src/TimerA2.cc
	* src/TimerA2.h

2010-04-12  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>

	Removed redundant method call for DownloadEngine.
	* src/DownloadCommand.cc

2010-04-12  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>

	Fixed the bug that hash check hangs when aria2.pause is issued
	while aria2 is checking piece hashes.  Fixed the bug that the
	download is paused after file allocation completion even if
	aria2.pause is issued during file allocation.
	* src/CheckIntegrityCommand.cc
	* src/FileAllocationCommand.cc

2010-04-12  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>
